--- a/style.css
+++ b/style.css
@@ -42,22 +42,21 @@ h1 {
 	color: var(--white);
 }
 
-/* MOBILE FIRST */
 ul {
   list-style: none;
-  padding: 0;
-  margin: 0;
+  /* padding: 0;
+  margin: 0; */
 
   display: flex;
   flex-wrap: wrap;
-  gap: 1.5rem;              /* space between cards */
+  /* gap: 1.5rem;              space between cards */
 }
 
 ul > li {
   flex: 0 0 100%;           /* 1 per row on mobile */
   /* optional “card” styling: */
   border: 2px solid var(--white);
-  border-radius: 1.25rem;
+  /* border-radius: 1.25rem; */
   overflow: hidden;         /* helps image/video crop nicely */
   min-height: 40vh;         /* optional */
 }
@@ -83,24 +82,27 @@ ul > li > a {
 		font-weight: bolder;
 	}
 }
+
+
+/* ============== MEDIA ============== */
 video {
-	block-size: 100%; /* Fill the parent. */
-	inline-size: 100%;
-	object-fit: cover; /* Cover the parent. */
-	object-position: right center; /* Side. */
-	overflow: clip;
+	width: 100%;
+  height: 100%;
+  object-fit: cover;
+  overflow: clip;
 }
+/* 😭😭😭😭😭😭 How do i make to so that the video fills the container and clips  */
 
 img {
 	block-size: 100%; /* Fill the parent. */
 	inline-size: 100%;
 	object-fit: cover; /* Cover the parent. */
-	object-position: right center; /* Side. */
+	object-position: center; /* Side. */
 	overflow: clip; /* Chrome needs this to hide extra. */
-/* WANTED IMAGE TO FIT THE SHAPE WITHOUT DISTORITING REMEMBERED OUT IMG LECTURE  */
+/* WANTED IMAGE TO FIT THE SHAPE WITHOUT DISTORITING REMEMBERED IMG LECTURE FROM TYPE & INTERACTION 1 */
 	/* SOURCED FROM https://typography-interaction-2526.github.io/topic/images/#object-fit-object-position */
 }
-
+/* =================================== */
 
 footer {
 	font-size: var(--small-copy);
@@ -123,8 +125,6 @@ footer {
 	/* found align-items: center; */
 	/* https://developer.mozilla.org/en-US/docs/Web/CSS/How_to/Layout_cookbook/Center_an_element  */
 }
-
-
 
 /* ======MEDIA QUERIES====== */
 /* TABLET: 2 per row */
