--- a/style.css
+++ b/style.css
@@ -45,6 +45,11 @@ body {
 
 	/* margin-left: 2rem;
 	padding-right: 2rem; */
+
+	a {
+		text-decoration: underline;
+		text-underline-offset: .25rem;
+	}
 }
 
 h1 {
@@ -52,6 +57,7 @@ h1 {
 	margin-bottom: 4rem;
 	font-family: var(--font-heading);
 	font-size: var(--h1-copy);
+	letter-spacing: .02em;
 	line-height: 1em;
 
 	text-align: center;
@@ -71,6 +77,10 @@ h1 {
 		display: flex;
 		flex-wrap: wrap;
 		/* gap: 1.5rem;              space between cards */
+	}
+
+	.container-test {
+			backdrop-filter: blur(10px);
 	}
 
 	ul li {
@@ -94,8 +104,7 @@ h1 {
 	display: block;
 	margin: auto;
 	text-align: center;
-	/* text-align: center; */
-	max-width: 50ch;
+	max-width: 60ch;
 
 	margin-top: 5rem;
 	margin-bottom: 8rem;
@@ -107,19 +116,22 @@ h1 {
 		font-family: var(--font-heading);
 		font-size: var(--h2-copy);
 		text-transform: uppercase;
-		font-weight: bolder;
+		/* font-weight: bolder; */
+		letter-spacing: .05em;
 	}
 
-	a {
-		text-decoration: underline;
-		text-underline-offset: .25rem;
-	}
 
 	a:hover {
 		text-decoration: underline;
 		height: 100%;
 	}
+
+	.curate-tag {
+		padding-top:1rem;
+	}
 }
+
+
 
 
 /* ============== MEDIA ============== */
@@ -213,6 +225,8 @@ found mdn link to "https://developer.mozilla.org/en-US/docs/Web/CSS/Reference/Pr
 			flex-basis: calc(25% - (1.5rem * 3 / 4));
 		}
 	}
+
+	
 
 	#navigation {
 		padding-left: 2rem;
