--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ body {
 	}
 }
 
+header {
 h1 {
 	margin-top: 8rem;
 	margin-bottom: 4rem;
@@ -66,6 +67,7 @@ h1 {
 
 	color: var(--white);
 }
+}
 
 .blocks {
 	ul {
@@ -77,26 +79,25 @@ h1 {
 		display: flex;
 		flex-wrap: wrap;
 		/* gap: 1.5rem;              space between cards */
-	}
 
+		li {
+			flex: 100%;
+			/* border: 2px solid var(--white); */
+			border-radius: 1rem;
+			overflow: hidden;
+			/* helps image/video crop nicely */
+			height: 50vh;
+
+			a {
+				display: block;
+				height: 100%;
+			}
+		}
+	}
+}
 	.container-test {
 			backdrop-filter: blur(10px);
 	}
-
-	ul li {
-		flex: 100%;
-		border: 2px solid var(--white);
-		/* border-radius: 1.25rem; */
-		overflow: hidden;
-		/* helps image/video crop nicely */
-		min-height: 50vh;
-	}
-
-	ul li a {
-		display: block;
-		height: 100%;
-	}
-}
 
 .img-block{
 	position: relative;
@@ -107,7 +108,7 @@ h1 {
 	position: absolute;
 	inset: 0;
 	z-index: 2;
-  
+
 	/* glass look */
 	/* From https://css.glass */
 background: rgba(255, 255, 255, 0.49);
@@ -116,20 +117,20 @@ box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 backdrop-filter: blur(5px);
 -webkit-backdrop-filter: blur(14.5px);
 border: 1px solid rgba(255, 255, 255, 0.21);
-  
+
 	display: flex;
 	align-items: center;
 	justify-content: center;
   
 	transition: opacity 0.3s ease;
   }
-  
+
   /* hide on hover */
   .img-block:hover .container-test{
 	opacity: 0;
 	pointer-events: none;
-  }
-  
+}
+
 
 .about {
 	/* display: block; */
@@ -167,10 +168,10 @@ border: 1px solid rgba(255, 255, 255, 0.21);
 
 
 /* ============== MEDIA ============== */
-video {
+.video-container {
 	width: 100%;
-	height: 100%;
-	object-fit: cover;
+	/* height: 100%; */
+	/* object-fit: cover; */
 	overflow: clip;
 }
 
@@ -258,12 +259,8 @@ found mdn link to "https://developer.mozilla.org/en-US/docs/Web/CSS/Reference/Pr
 		}
 	}
 
-	
-
 	#navigation {
 		padding-left: 2rem;
 		padding-right: 2rem;
 	}
 }
-
-/* ISSUE WITH RESPOSIVENESS - AT APPROX 1257 THE H1 GETS STACKED WHY? */
