--- a/assets/style.css
+++ b/assets/style.css
@@ -178,18 +178,16 @@ border: 1px solid rgba(255, 255, 255, 0.21);
 /* 😭😭😭😭😭😭 How do i make to so that the video fills the container and clips  */
 
 img {
-	block-size: 100%;
-	/* Fill the parent. */
-	inline-size: 100%;
-	object-fit: cover;
-	/* Cover the parent. */
-	object-position: center;
-	/* Side. */
-	overflow: clip;
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+		object-position: center;
+		display: block;
+	}
 	/* Chrome needs this to hide extra. */
 	/* WANTED IMAGE TO FIT THE SHAPE WITHOUT DISTORITING REMEMBERED IMG LECTURE FROM TYPE & INTERACTION 1 */
 	/* SOURCED FROM https://typography-interaction-2526.github.io/topic/images/#object-fit-object-position */
-}
+
 
 /* =================================== */
 
@@ -264,3 +262,4 @@ found mdn link to "https://developer.mozilla.org/en-US/docs/Web/CSS/Reference/Pr
 		padding-right: 2rem;
 	}
 }
+
