--- a/assets/style.css
+++ b/assets/style.css
@@ -53,20 +53,20 @@ body {
 }
 
 header {
-h1 {
-	margin-top: 8rem;
-	margin-bottom: 4rem;
-	font-family: var(--font-heading);
-	font-size: var(--h1-copy);
-	letter-spacing: .02em;
-	line-height: 1em;
+	h1 {
+		margin-top: 8rem;
+		margin-bottom: 4rem;
+		font-family: var(--font-heading);
+		font-size: var(--h1-copy);
+		letter-spacing: .02em;
+		line-height: 1em;
 
-	text-align: center;
-	/* font-weight: bolder; */
-	text-transform: uppercase;
+		text-align: center;
+		/* font-weight: bolder; */
+		text-transform: uppercase;
 
-	color: var(--white);
-}
+		color: var(--white);
+	}
 }
 
 .blocks {
@@ -78,11 +78,9 @@ h1 {
 
 		display: flex;
 		flex-wrap: wrap;
-		/* gap: 1.5rem;              space between cards */
 
 		li {
 			flex: 100%;
-			/* border: 2px solid var(--white); */
 			border-radius: 1rem;
 			overflow: hidden;
 			/* helps image/video crop nicely */
@@ -95,44 +93,45 @@ h1 {
 		}
 	}
 }
-	.container-test {
-			backdrop-filter: blur(10px);
-	}
 
-.img-block{
+/* .container-test {
+			backdrop-filter: blur(10rem);
+	} */
+
+.img-block {
 	position: relative;
 	overflow: hidden;
-  }
-  
-  .container-test{
+}
+
+.container-test {
 	position: absolute;
 	inset: 0;
 	z-index: 2;
 
 	/* glass look */
 	/* From https://css.glass */
-background: rgba(255, 255, 255, 0.49);
-/* border-radius: 16px; */
-box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-backdrop-filter: blur(5px);
--webkit-backdrop-filter: blur(14.5px);
-border: 1px solid rgba(255, 255, 255, 0.21);
+	background: rgba(255, 255, 255, 0.49);
+	/* border-radius: 16px; */
+	box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+	backdrop-filter: blur(5px);
+	-webkit-backdrop-filter: blur(14.5px);
+	border: 1px solid rgba(255, 255, 255, 0.21);
 
 	display: flex;
 	align-items: center;
 	justify-content: center;
-  
-	transition: opacity 0.3s ease;
-  }
 
-  /* hide on hover */
-  .img-block:hover .container-test{
+	transition: opacity 0.3s ease;
+}
+
+/* hide on hover */
+.img-block:hover .container-test {
 	opacity: 0;
 	pointer-events: none;
 }
 
 
-.about {
+.description {
 	/* display: block; */
 	display: block;
 	margin: auto;
@@ -160,33 +159,31 @@ border: 1px solid rgba(255, 255, 255, 0.21);
 	}
 
 	.curate-tag {
-		padding-top:1rem;
+		padding-top: 1rem;
 	}
 }
-
-
 
 
 /* ============== MEDIA ============== */
 .video-container {
 	width: 100%;
 	/* height: 100%; */
-	/* object-fit: cover; */
+	object-fit: cover;
 	overflow: clip;
 }
 
 /* 😭😭😭😭😭😭 How do i make to so that the video fills the container and clips  */
 
 img {
-		width: 100%;
-		height: 100%;
-		object-fit: cover;
-		object-position: center;
-		display: block;
-	}
-	/* Chrome needs this to hide extra. */
-	/* WANTED IMAGE TO FIT THE SHAPE WITHOUT DISTORITING REMEMBERED IMG LECTURE FROM TYPE & INTERACTION 1 */
-	/* SOURCED FROM https://typography-interaction-2526.github.io/topic/images/#object-fit-object-position */
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	object-position: center;
+	display: block;
+}
+
+/* WANTED IMAGE TO FIT THE SHAPE WITHOUT DISTORITING REMEMBERED IMG LECTURE FROM TYPE & INTERACTION 1 */
+/* SOURCED FROM https://typography-interaction-2526.github.io/topic/images/#object-fit-object-position */
 
 
 /* =================================== */
@@ -212,14 +209,33 @@ footer {
 	/*  Googled "mdn center align"/*
 	/* found align-items: center; */
 	/* https://developer.mozilla.org/en-US/docs/Web/CSS/How_to/Layout_cookbook/Center_an_element  */
-}
+	}
+
+	#channel-link {
+		display: inline-block;
+		
+		padding: 0.75rem 1rem;
+		margin-top: 2rem;
+		background: rgba(255, 255, 255, 0.3);
+		backdrop-filter: blur(10px);
+		color: var(--white);
+		border-radius: 1rem;
+		border: 1px solid rgba(255, 255, 255, 0.4);
+		text-decoration: none;
+		transition: transform 0.15s ease, background-color 0.15s ease, color 0.15s ease;
+	}
+	#channel-link:hover {
+		background-color: var(--color);
+		color: var(--black);
+		transform: translateY(-2px);
+	}
 
 /* ======MEDIA QUERIES====== */
 /* TABLET: 2 per row */
 /* Googled "us theere a way to set width of flex" 
 found mdn link to "https://developer.mozilla.org/en-US/docs/Web/CSS/Reference/Properties/flex-basis" */
 /* the proerty stes the initial main size of content  */
-@media (min-width: 768px) {
+@media (width > 768px) {
 	.blocks {
 		ul>li {
 			flex-basis: calc(50% - (1.5rem / 2));
@@ -233,7 +249,7 @@ found mdn link to "https://developer.mozilla.org/en-US/docs/Web/CSS/Reference/Pr
 }
 
 /* DESKTOP: 4 per row */
-@media (min-width: 1200px) {
+@media (width > 1200px) {
 	body {
 		font-size: 1.5rem;
 		font-kerning: normal;
@@ -248,7 +264,7 @@ found mdn link to "https://developer.mozilla.org/en-US/docs/Web/CSS/Reference/Pr
 	}
 
 	h1 {
-		font-size: 19rem;
+		font-size: 10rem;
 	}
 
 	.blocks {
@@ -262,4 +278,3 @@ found mdn link to "https://developer.mozilla.org/en-US/docs/Web/CSS/Reference/Pr
 		padding-right: 2rem;
 	}
 }
-
