--- a/assets/style.css
+++ b/assets/style.css
@@ -53,7 +53,14 @@ body {
 }
 
 header {
-	h1 {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 100%;
+	justify-content: space-between;
+	padding-bottom: 5rem;
+	
+		h1 {
 		margin-top: 8rem;
 		margin-bottom: 4rem;
 		font-family: var(--font-heading);
