--- a/assets/style.css
+++ b/assets/style.css
@@ -25,17 +25,22 @@
 }
 
 header {
-		display: flex;
-		align-items: center;
-		padding: 0 1rem;
-
+	padding: 1rem;
+	display: flex;
+	justify-content: space-between;
+  	/* align-items: center; */
 	border-bottom: .1rem solid var(--black);
 
-	
-	path{
+	#logo {
 		fill: var(--black);
-		width: 2rem;
-		height: auto;
+		width: auto;
+		height: 2rem;
+	}
+	
+	#channel-link{
+		fill: var(--black);
+		width: auto;
+		height: 2rem;
 	}
 }
 
@@ -123,8 +128,6 @@ hgroup {
 	}
 }
 
-
-  
 .description {
 	display: block;
 	margin: auto;
